# SDR-Shark

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  manage_service.sh  requirements.txt  start.sh
backend/: pyproject.toml  setup.py
backend/src/sdr_plot_backend/: __init__.py  __main__.py  actions.py  adsb_plugin.py  api.py  bluetooth_plugin.py  file_manager.py  fm_plugin.py  gps_plugin.py  iq_session.py  peak_detector.py  sdr_generic.py  sdr_scheduler_config.json  sigid_plugin.py  signal_utils.py  utils.py  wifi_plugin.py  zigbee_plugin.py
backend/src/sdr_plot_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/sdr_plot_backend/classifier/: AIS.py  AM.py  APCO16.py  AeronauticalNavigation.py  AircraftRadio.py  AviationService.py  Base.py  Bluetooth.py  BroadbandRadioService.py  BroadcastTV.py  CDMA.py  DECT.py  DMR.py  EarthExpSatellite.py  F460_470MHz.py  FM.py  FRS.py  FederalPart15.py  FiveG.py  GSM.py  GenericClassifier.py  HDRadio.py  Inmarsat.py  Iridium.py  LTE.py  LTR.py  LoRaWAN.py  MPT1327.py  MURS.py  NOAAWeather.py  NXDN.py  OpenSky.py  P25.py  PDT.py  PublicSafety.py  SiriusXM.py  TDMA.py  TETRA.py  UHF.py  UMTS.py  (+7 more)
backend/src/sdr_plot_backend/native/: build_fm_channelizer.sh  fm_channelizer_liquid.c
backend/src/sdr_plot_backend/plugins/adsb_rx/adsb-rx/: Cargo.toml  README.md  gmap.html
backend/src/sdr_plot_backend/plugins/adsb_rx/adsb-rx/src/: aircraft.rs  config.rs  crc.rs  decoder.rs  demodulator.rs  magnitude.rs  main.rs  network.rs  signal.rs
backend/tests/: load_save_selection.ipynb  plot_action_sched_find_peaks.ipynb  plot_action_sched_recording.ipynb  test_antsdr_support.py  test_api.py  test_classifier.py  test_find_peaks power.ipynb  test_find_peaks.ipynb  test_find_peaks.py  test_find_peaks_load_pickle.ipynb  test_peak_detector.ipynb  test_perform_and_refine_scan.ipynb  test_perform_and_refine_scan.py  test_soapy_backend.py
data/: data_dict.pkl
docker/: Dockerfile  Makefile  supervisord.conf
docs/: plugin-installation.md
frontend/: .eslintignore  .eslintrc.js  README.md  package.json  setProxy.js  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  config-overrides.js  config.js  index.js  styles.css  theme.js
frontend/src/components/: Actions.jsx  Analysis.jsx  ChartComponent.jsx  ControlPanel.css  ControlPanel.jsx  DecodedEventsPanel.jsx  FFTPlot.jsx  GpsDialog.jsx  GpuSpectrum.jsx  Plots.jsx  (+6 more)
scripts/: install.sh  run_gateway.sh  sdr-shark-service.sh  start.sh
sdr_plot_backend/: pyproject.toml
sdr_plot_backend/src/python_flask_simple/: __init__.py  api.py  utils.py
sdr_plot_frontend/: package-lock.json  package.json
sdr_plot_frontend/src/: App.css  index.js
(+13 files in other folders)
