[package]
name = "adsb-rx"
version = "0.2.3"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full", "process"] }
bytes = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
